tests/js/success/compile_funexpr3.js
SplayTree.prototype.insert = function() { return 0; }
SplayTree.prototype.insert()
