tests/js/error/semantics/builtin_function_apply_valueOf.js
function f() { return this; }
var x = f.apply(10);

var __result1 = x.valueOf();
var __expect1 = 10;
